Cloudflared-Istio/istio_ir.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    k8slens-edit-resource-version: v1beta1
  name: demo-gateway
  namespace: demo
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - devs.dmirandam.com
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-vs
  namespace: demo
spec:
  gateways:
    - demo-gateway
  hosts:
    - dev.dmirandam.com
  http:
    - route:
        - destination:
            host: nginx-svc
            port:
              number: 80
